    - Obsoletes 03-sh-architecture.patch
  * Dropped obsolete documentation build.
  * debian/rules: Use make world/install-world targets, obsoletes
    01-build-contrib.patch.
  * debian/watch: Adjusted for alpha releases.

  [ Martin Pitt ]
  * Update to upstream alpha 5 release.
  * debian/postgresql-9.0.postinst: Drop obsolete init script migration code.

 -- Peter Eisentraut <petere@debian.org>  Sun, 28 Mar 2010 00:23:13 +0200

postgresql-8.4 (8.4.3-1) unstable; urgency=low

  * New upstream bug fix release:
    - Add new configuration parameter ssl_renegotiation_limit to control
      how often we do session key renegotiation for an SSL connection.
      This can be set to zero to disable renegotiation completely, which
      may be required if a broken SSL library is used. In particular,
      some vendors are shipping stopgap patches for CVE-2009-3555 that
      cause renegotiation attempts to fail.
    - Fix possible deadlock during backend startup.
    - Fix possible crashes due to not handling errors during relcache
      reload cleanly.
    - Fix possible crash due to use of dangling pointer to a cached plan.
    - Fix possible crash due to overenthusiastic invalidation of cached
      plan for "ROLLBACK".
    - Fix possible crashes when trying to recover from a failure in
      subtransaction start.
    - Fix server memory leak associated with use of savepoints and a
      client encoding different from server's encoding.
    - Fix incorrect WAL data emitted during end-of-recovery cleanup of a
      GIST index page split.
    - Fix bug in WAL redo cleanup method for GIN indexes.
    - Fix incorrect comparison of scan key in GIN index search.
    - Make substring() for bit types treat any negative length as meaning
      "all the rest of the string". The previous coding treated only -1 that
      way, and would produce an invalid result value for other negative
      values, possibly leading to a crash (CVE-2010-0442).