@@ -13,6 +13,9 @@ postgresql-9.0 (9.0~alpha5-0.1) UNRELEASED; urgency=low
   [ Martin Pitt ]
   * Update to upstream alpha 5 release.
   * debian/postgresql-9.0.postinst: Drop obsolete init script migration code.
+  * 07-relax-sslkey-permscheck.patch: Add parentheses around || .. &&
+    construct to avoid a compiler warning (which turns into an error due to
+    -Werror in alpha builds). Also add a DEP3 compatible header.
 
  -- Peter Eisentraut <petere@debian.org>  Sun, 28 Mar 2010 00:23:13 +0200
 
